--- a/package.json
+++ b/package.json
@@ -1,25 +1,37 @@
 {
-  "name": "eth-net-viewer-server",
-  "version": "1.0.0",
-  "description": "Ethereum Network Visualizer - Server",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/loopingdoge/eth-net-viewer-server.git"
-  },
-  "author": "Looping Doge",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/loopingdoge/eth-net-viewer-server/issues"
-  },
-  "homepage": "https://github.com/loopingdoge/eth-net-viewer-server#readme",
-  "dependencies": {
-    "express": "^4.16.2",
-    "nodemon": "^1.17.1",
-    "web3": "^1.0.0-beta.30"
-  }
+    "name": "eth-net-viewer-server",
+    "version": "1.0.0",
+    "description": "Ethereum Network Visualizer - Server",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon index.js",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "precommit": "pretty-quick --staged"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/loopingdoge/eth-net-viewer-server.git"
+    },
+    "author": "Looping Doge",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/loopingdoge/eth-net-viewer-server/issues"
+    },
+    "homepage": "https://github.com/loopingdoge/eth-net-viewer-server#readme",
+    "dependencies": {
+        "express": "^4.16.2",
+        "lodash": "^4.17.5",
+        "nodemon": "^1.17.1",
+        "web3": "^1.0.0-beta.30"
+    },
+    "devDependencies": {
+        "husky": "^0.14.3",
+        "prettier": "1.11.1",
+        "pretty-quick": "^1.4.1"
+    },
+    "prettier": {
+        "tabWidth": 4,
+        "semi": false,
+        "singleQuote": true
+    }
 }
