--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "homepage": "https://github.com/loopingdoge/eth-net-viewer-server#readme",
     "dependencies": {
         "express": "^4.16.2",
+        "jsonfile": "^4.0.0",
         "lodash": "^4.17.5",
         "nodemon": "^1.17.1",
         "web3": "^1.0.0-beta.30"
