--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "name": "eth-net-viewer-server",
     "version": "1.0.0",
     "description": "Ethereum Network Visualizer - Server",
-    "main": "index.js",
+    "main": "src/index.js",
     "scripts": {
-        "start": "nodemon index.js",
+        "start": "nodemon src/index.js",
         "test": "echo \"Error: no test specified\" && exit 1",
         "precommit": "pretty-quick --staged"
     },
