--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Ethereum Network Visualizer - Server",
     "main": "src/index.js",
     "scripts": {
-        "start": "nodemon src/index.js",
+        "start": "node src/index.js",
         "test": "echo \"Error: no test specified\" && exit 1",
         "precommit": "pretty-quick --staged"
     },
@@ -22,7 +22,6 @@
         "express": "^4.16.2",
         "jsonfile": "^4.0.0",
         "lodash": "^4.17.5",
-        "nodemon": "^1.17.1",
         "web3": "^1.0.0-beta.30"
     },
     "devDependencies": {
