--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "homepage": "https://github.com/loopingdoge/eth-net-viewer-server#readme",
     "dependencies": {
+        "colors": "^1.2.0",
         "express": "^4.16.2",
         "jsonfile": "^4.0.0",
         "lodash": "^4.17.5",
