--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "homepage": "https://github.com/loopingdoge/eth-net-viewer-server#readme",
     "dependencies": {
         "colors": "^1.2.0",
+        "d3-force-3d": "^1.1.0",
         "express": "^4.16.2",
         "jsonfile": "^4.0.0",
         "lodash": "^4.17.5",
+        "node-progress": "^0.1.0",
         "web3": "^1.0.0-beta.30"
     },
     "devDependencies": {
