--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "express": "^4.16.2",
         "jsonfile": "^4.0.0",
         "lodash": "^4.17.5",
-        "node-progress": "^0.1.0",
+        "progress": "^2.0.0",
         "web3": "^1.0.0-beta.30"
     },
     "devDependencies": {
