--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "express": "^4.16.2",
         "jsonfile": "^4.0.0",
         "lodash": "^4.17.5",
+        "ngraph.graph": "^0.0.14",
+        "ngraph.offline.layout": "^1.1.1",
         "progress": "^2.0.0",
         "web3": "^1.0.0-beta.30"
     },
