--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "homepage": "https://github.com/loopingdoge/ethereum-galaxy-server#readme",
     "dependencies": {
         "colors": "^1.2.0",
-        "commander": "^2.15.0",
         "express": "^4.16.2",
         "jsonfile": "^4.0.0",
         "lodash": "^4.17.5",
         "ngraph.graph": "^0.0.14",
         "ngraph.offline.layout": "^1.1.1",
         "ngraph.tobinary": "^1.0.1",
+        "node-schedule": "^1.3.0",
         "progress": "^2.0.0",
         "web3": "^1.0.0-beta.30"
     },
